[FIX] bad spacing on button

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -55,3 +55,7 @@
     text-align: center;
     justify-content: center;
 }
+
+.font-size-small {
+    font-size: small;
+}
